--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-APP_DB_CONNECTION = 'mongodb+srv://TeamRona:internhacks2020@cluster0.9ibkx.mongodb.net/test?retryWrites=true&w=majority';
+APP_DB_CONNECTION = 'mongodb+srv://TeamRona:internhacks2020@cluster0.9ibkx.mongodb.net/Post?retryWrites=true&w=majority';
