--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-        "start": "nodemon app.js"
+        "start": "node server/app.js",
+        "local": "nodemon server/app.js"
     },
     "author": "",
     "license": "ISC",
