--- a/package.json
+++ b/package.json
@@ -1,21 +1,49 @@
 {
-    "name": "ronadatabase",
-    "version": "1.0.0",
-    "description": "",
+    "title": "Landing Page",
+    "name": "startbootstrap-landing-page",
+    "version": "5.0.8",
     "scripts": {
-        "start": "node server/app.js",
-        "local": "nodemon server/app.js"
+        "start": "node_modules/.bin/gulp watch"
     },
-    "author": "",
-    "license": "ISC",
+    "description": "An HTML landing page template built with Bootstrap",
+    "keywords": [
+        "css",
+        "sass",
+        "html",
+        "responsive",
+        "theme",
+        "template"
+    ],
+    "homepage": "https://startbootstrap.com/themes/landing-page",
+    "bugs": {
+        "url": "https://github.com/StartBootstrap/startbootstrap-landing-page/issues",
+        "email": "feedback@startbootstrap.com"
+    },
+    "license": "MIT",
+    "author": "Start Bootstrap",
+    "contributors": [
+        "David Miller (http://davidmiller.io/)"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/StartBootstrap/startbootstrap-landing-page.git"
+    },
     "dependencies": {
-        "@types/dotenv": "^8.2.0",
-        "body-parser": "^1.19.0",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "mongoose": "^5.9.21"
+        "@fortawesome/fontawesome-free": "5.13.1",
+        "bootstrap": "4.5.0",
+        "jquery": "3.5.1",
+        "simple-line-icons": "^2.4.1"
     },
     "devDependencies": {
-        "nodemon": "^2.0.4"
+        "browser-sync": "2.26.7",
+        "del": "5.1.0",
+        "gulp": "4.0.2",
+        "gulp-autoprefixer": "7.0.1",
+        "gulp-clean-css": "4.3.0",
+        "gulp-header": "2.0.9",
+        "gulp-plumber": "^1.2.1",
+        "gulp-rename": "2.0.0",
+        "gulp-sass": "4.1.0",
+        "merge-stream": "2.0.0"
     }
 }
