--- a/package.json
+++ b/package.json
@@ -44,6 +44,12 @@
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "2.0.0",
         "gulp-sass": "4.1.0",
-        "merge-stream": "2.0.0"
+        "merge-stream": "2.0.0",
+        "@types/dotenv": "^8.2.0",
+        "body-parser": "^1.19.0",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "mongoose": "^5.9.21"
+
     }
 }
