--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongoose": "^5.9.21",
-        "cors": "2.8.5"
+        "cors": "2.8.5",
+        "gulp-exec": "5.0.0",
+        "gulp-nodemon": "2.5.0"
     },
     "devDependencies": {
         "browser-sync": "2.26.7",
