--- a/package.json
+++ b/package.json
@@ -32,7 +32,13 @@
         "@fortawesome/fontawesome-free": "5.13.1",
         "bootstrap": "4.5.0",
         "jquery": "3.5.1",
-        "simple-line-icons": "^2.4.1"
+        "simple-line-icons": "^2.4.1",
+        "@types/dotenv": "^8.2.0",
+        "body-parser": "^1.19.0",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "mongoose": "^5.9.21",
+        "cors": "2.8.5"
     },
     "devDependencies": {
         "browser-sync": "2.26.7",
@@ -50,6 +56,5 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongoose": "^5.9.21"
-
     }
 }
