--- a/package.json
+++ b/package.json
@@ -39,10 +39,7 @@
         "express": "^4.17.1",
         "mongoose": "^5.9.21",
         "cors": "2.8.5",
-        "gulp-exec": "5.0.0",
-        "gulp-nodemon": "2.5.0"
-    },
-    "devDependencies": {
+        "gulp-nodemon": "2.5.0",
         "browser-sync": "2.26.7",
         "del": "5.1.0",
         "gulp": "4.0.2",
@@ -52,11 +49,6 @@
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "2.0.0",
         "gulp-sass": "4.1.0",
-        "merge-stream": "2.0.0",
-        "@types/dotenv": "^8.2.0",
-        "body-parser": "^1.19.0",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "mongoose": "^5.9.21"
+        "merge-stream": "2.0.0"
     }
 }
