--- a/package.json
+++ b/package.json
@@ -20,7 +20,17 @@
         "mongoose": "^5.9.21",
         "cors": "2.8.5",
         "gulp-exec": "5.0.0",
-        "gulp-nodemon": "2.5.0"
+        "gulp-nodemon": "2.5.0",
+        "browser-sync": "2.26.7",
+        "del": "5.1.0",
+        "gulp": "4.0.2",
+        "gulp-autoprefixer": "7.0.1",
+        "gulp-clean-css": "4.3.0",
+        "gulp-header": "2.0.9",
+        "gulp-plumber": "^1.2.1",
+        "gulp-rename": "2.0.0",
+        "gulp-sass": "4.1.0",
+        "merge-stream": "2.0.0"
     },
     "devDependencies": {
         "browser-sync": "2.26.7",
