--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
     "license": "ISC",
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.13.1",
-        "bootstrap": "4.5.0",
-        "jquery": "3.5.1",
-        "simple-line-icons": "^2.4.1",
         "@types/dotenv": "^8.2.0",
         "body-parser": "^1.19.0",
+        "bootstrap": "4.5.0",
+        "browser-sync": "2.26.7",
+        "cors": "2.8.5",
+        "del": "5.1.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "mongoose": "^5.9.21",
-        "cors": "2.8.5",
-        "gulp-exec": "5.0.0",
-        "gulp-nodemon": "2.5.0",
-        "browser-sync": "2.26.7",
-        "del": "5.1.0",
         "gulp": "4.0.2",
         "gulp-autoprefixer": "7.0.1",
         "gulp-clean-css": "4.3.0",
+        "gulp-exec": "5.0.0",
         "gulp-header": "2.0.9",
+        "gulp-nodemon": "2.5.0",
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "2.0.0",
         "gulp-sass": "4.1.0",
-        "merge-stream": "2.0.0"
+        "jquery": "3.5.1",
+        "merge-stream": "2.0.0",
+        "mongoose": "^5.9.21",
+        "simple-line-icons": "^2.4.1"
     },
     "devDependencies": {
         "browser-sync": "2.26.7",
